--- a/equinix/userdata-join.yaml
+++ b/equinix/userdata-join.yaml
@@ -1,21 +1,15 @@
 #cloud-config
 server_url: https://<new_cluster_server_ip>:8443
-token: token           # replace with the token you set when creating a new cluster
+token: token
 os:
   ssh_authorized_keys:
   - ssh-rsa ...        # replace with your public key
-  password: p@ssword   # replace with a your password
+  password: p@ssword
   ntp_servers:
   - 0.suse.pool.ntp.org
   - 1.suse.pool.ntp.org
 install:
   mode: join
-  networks:
-    harvester-mgmt:    # The management bond name. This is mandatory.
-      interfaces:
-      - name: eth0
-      default_route: true
-      method: dhcp
   device: /dev/sda
-  iso_url: https://releases.rancher.com/harvester/master/harvester-master-amd64.iso
+  iso_url: https://releases.rancher.com/harvester/v1.0.2/harvester-v1.0.2-amd64.iso
   tty: ttyS1,115200n8
